[fix] Truncate text buttons on overflow (#2695)

--- a/apps/desktop/src/scss/buttons.scss
+++ b/apps/desktop/src/scss/buttons.scss
@@ -176,4 +176,7 @@ button.no-btn {
   @include themify($themes) {
     color: themed("textColor");
   }
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
